[gd_scene load_steps=15 format=3 uid="uid://ct2meksk8huhw"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_j3a81"]
[ext_resource type="Theme" uid="uid://dx4s2by52h7iv" path="res://Resources/_MainMenu.tres" id="2_i8mb0"]
[ext_resource type="FontFile" uid="uid://dx8xmmu1q1k1" path="res://Assets/determination_mono.ttf" id="3_60xcr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xbyv"]
bg_color = Color(0, 0, 0, 0.670588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4lxqy"]
bg_color = Color(0.00784314, 0.0352941, 0.109804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_abcqk"]
bg_color = Color(0.0784314, 0.109804, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vt5lu"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ln5kt"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7trvk"]
bg_color = Color(0.6, 0.6, 0.6, 0.243137)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h5f8f"]
bg_color = Color(0.964706, 0.368627, 0.0392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pb1o3"]
bg_color = Color(0.6, 0.6, 0.6, 0.211765)

[sub_resource type="Animation" id="Animation_jvhqr"]
resource_name = "fade_in"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.05, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_akfbk"]
resource_name = "fade_out"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hwltm"]
_data = {
"fade_in": SubResource("Animation_jvhqr"),
"fade_out": SubResource("Animation_akfbk")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_j3a81")

[node name="Panel2" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2xbyv")

[node name="Panel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(10, 10)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -60.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4lxqy")

[node name="Panel" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -68.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_abcqk")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 232.0
offset_top = 8.0
offset_right = 428.0
offset_bottom = 33.0
theme = ExtResource("2_i8mb0")
theme_override_font_sizes/font_size = 20
text = "GAME OVER"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 232.0
offset_top = 32.0
offset_right = 428.0
offset_bottom = 57.0
theme = ExtResource("2_i8mb0")
theme_override_font_sizes/font_size = 20
text = "SCORE: 0"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 52.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vt5lu")

[node name="MarginContainer" type="MarginContainer" parent="Panel/CenterContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("2_i8mb0")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_i8mb0")

[node name="Button" type="Button" parent="Panel/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
theme = ExtResource("2_i8mb0")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_60xcr")
theme_override_styles/normal = SubResource("StyleBoxFlat_ln5kt")
theme_override_styles/hover = SubResource("StyleBoxFlat_7trvk")
text = "RESTART"

[node name="Button2" type="Button" parent="Panel/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_i8mb0")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_60xcr")
theme_override_styles/normal = SubResource("StyleBoxFlat_h5f8f")
theme_override_styles/hover = SubResource("StyleBoxFlat_pb1o3")
text = "MENU"

[node name="transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hwltm")
}

[node name="ColorRect" type="ColorRect" parent="transition"]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -660.0
offset_top = -650.0
offset_right = 12.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Panel/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
